Fix customize dashboard new widgets not showing. fix loading icon

--- a/assets/src/scss/customize/_common.scss
+++ b/assets/src/scss/customize/_common.scss
@@ -236,7 +236,7 @@
   max-width: 100%;
 
   .cd-loading-icon-arrow {
-    transform-origin: 15% 100%;
+    transform-origin: 40% 100%;
     animation: cd-icon-loading infinite 1s;
     animation-timing-function: ease-in;
   }
